<resources>
    <string name="app_name">Two Activities</string>
    <string name="button_main">send</string>
    <string name="message_text">Message Received</string>
    <string name="editText_main">Enter Your Message Here</string>
    <string name="button_second">Reply</string>
    <string name="editText_second">Enter Your Reply Here</string>
    <string name="text_header_reply">Reply Received</string>
</resources>
